Upgraded to Spring Boot 3.5 and Java 21