@@ -1,11 +1,13 @@
 package org.ztv.anmeldetool.exception;
 
+import java.io.Serial;
 import java.util.UUID;
 
 public class EntityNotFoundException extends Exception {
+	@Serial
 	private static final long serialVersionUID = 1L;
 
 	public EntityNotFoundException(Class<?> clazz, UUID id) {
-		super(String.format("Entity of class %s with id %s not found", clazz.getSimpleName(), id.toString()));
+		super("Entity of class %s with id %s not found".formatted(clazz.getSimpleName(), id.toString()));
 	}
 }
