@@ -8,16 +8,16 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import javax.persistence.CascadeType;
-import javax.persistence.Entity;
-import javax.persistence.EnumType;
-import javax.persistence.Enumerated;
-import javax.persistence.FetchType;
-import javax.persistence.JoinColumn;
-import javax.persistence.ManyToOne;
-import javax.persistence.OneToMany;
-import javax.persistence.Table;
-import javax.persistence.Transient;
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
+import jakarta.persistence.Transient;
 
 import org.ztv.anmeldetool.repositories.LauflistenRepository;
 
@@ -142,7 +142,7 @@ public class LauflistenContainer extends Base {
 	private String getKey(LauflistenRepository lauflistenRepo) {
 		Long sequence = lauflistenRepo.getNextSequence();
 		incrementKey();
-		String key = String.format("%05d", sequence);
+		String key = "%05d".formatted(sequence);
 		return key;
 	}
 }
